Correctly align distinctions with data

--- a/assets/css/account-benefits.scss
+++ b/assets/css/account-benefits.scss
@@ -27,9 +27,11 @@ body.page-accountbenefits {
 
   .data {
     @media (min-width: 993px) {
+      border-top: 1px solid transparent;
+
       &:not(.first) {
         border-top: 1px solid #ddd;
-        margin-top: 79px;
+        margin-top: 80px;
       }
     }
   }
@@ -51,7 +53,7 @@ body.page-accountbenefits {
       padding: 0;
 
       &:not(:first-child) {
-        margin-top: 40px;
+        margin-top: 80px;
       }
     }
 
@@ -78,12 +80,7 @@ body.page-accountbenefits {
 
     .heading {
       font-weight: bold;
-      min-height: 80px;
       border-bottom: 1px solid #ddd;
-
-      &:first-child {
-        min-height: 40px;
-      }
 
       span {
         right: 30px;
@@ -108,10 +105,6 @@ body.page-accountbenefits {
       @media (min-width: 1200px) {
         font-size: 14px;
       }
-    }
-
-    .heading-first {
-      margin-top: -40px;
     }
   }
 
